--- a/src/main/resources/static/carrinho.html
+++ b/src/main/resources/static/carrinho.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-    <h1 class="button" onclick="window.location.href='index.html'">RogerinhoBoasVendendas</h1>
+    <h1 class="h1_button" onclick="window.location.href='index.html'">RogerinhoBoasVendendas</h1>
     <div class="Buscar-bar">
         <input type="text" placeholder="Buscar Produtos...">
         <button onclick="BuscarProdutos()">Buscar</button>
