--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-    <h1 class="button" onclick="window.location.href='index.html'">RogerinhoBoasVendendas</h1>
+    <h1 class="h1_button" onclick="window.location.href='index.html'">RogerinhoBoasVendendas</h1>
     <div class="Buscar-bar">
         <input type="text" placeholder="Buscar Produtos...">
         <button onclick="BuscarProdutos()">Buscar</button>
@@ -47,78 +47,78 @@
     <div class="Produto">
         <img src="https://i.pinimg.com/236x/fd/a4/de/fda4dea0c6d23ffef38a36a08328a9e1.jpg" alt="Produto 5">
         <h2>Produto 5</h2>
-        <p>R$150.75</p>
+        <p>R$150,75</p>
         <button onclick="addToCart('Produto 5', 150.75)">Add to Cart</button>
     </div>
     <div class="Produto">
         <img src="https://i.pinimg.com/236x/1f/1c/ff/1f1cff49745bcf8fba97c8f04f61032c.jpg" alt="Produto 6">
         <h2>Produto 6</h2>
-        <p>R$230.00</p>
+        <p>R$230,00</p>
         <button onclick="addToCart('Produto 6', 230.00)">Add to Cart</button>
     </div>
     <div class="Produto">
         <img src="https://i.pinimg.com/474x/e5/df/3f/e5df3f45dadd88cedc24cdcf59192e0c.jpg" alt="Produto 7">
         <h2>Produto 7</h2>
-        <p>R$90.50</p>
+        <p>R$90,50</p>
         <button onclick="addToCart('Produto 7', 90.50)">Add to Cart</button>
     </div>
     <div class="Produto">
         <img src="https://i.pinimg.com/236x/f1/64/26/f16426e7b03ea78f63551fb0ee56348b.jpg" alt="Produto 8">
         <h2>Produto 8</h2>
-        <p>R$320.25</p>
+        <p>R$320,25</p>
         <button onclick="addToCart('Produto 8', 320.25)">Add to Cart</button>
     </div>
     <div class="Produto">
         <img src="https://i.pinimg.com/236x/30/60/f1/3060f1e9af5213448edf1f704b976c93.jpg" alt="Produto 9">
         <h2>Produto 9</h2>
-        <p>R$75.00</p>
+        <p>R$75,00</p>
         <button onclick="addToCart('Produto 9', 75.00)">Add to Cart</button>
     </div>
     <div class="Produto">
         <img src="https://i.pinimg.com/736x/24/bb/6f/24bb6f00e5d0b4e5a6caf1012e605e8a.jpg" alt="Produto 10">
         <h2>Produto 10</h2>
-        <p>R$400.00</p>
+        <p>R$400,00</p>
         <button onclick="addToCart('Produto 10', 400.00)">Add to Cart</button>
     </div>
     <div class="Produto">
         <img src="https://i.pinimg.com/236x/d9/4e/15/d94e1597035ca088ac6e5b51de749f3a.jpg" alt="Produto 11">
         <h2>Produto 11</h2>
-        <p>R$210.10</p>
+        <p>R$210,10</p>
         <button onclick="addToCart('Produto 11', 210.10)">Add to Cart</button>
     </div>
     <div class="Produto">
         <img src="https://i.pinimg.com/236x/40/7c/bc/407cbce5d7cbe429feb32ec04dc73210.jpg" alt="Produto 12">
         <h2>Produto 12</h2>
-        <p>R$50.00</p>
+        <p>R$50,00</p>
         <button onclick="addToCart('Produto 12', 50.00)">Add to Cart</button>
     </div>
     <div class="Produto">
         <img src="https://i.pinimg.com/736x/c3/9b/38/c39b38cb3c255edc535fc020ca4d8799.jpg" alt="Produto 13">
         <h2>Produto 13</h2>
-        <p>R$180.90</p>
+        <p>R$180,90</p>
         <button onclick="addToCart('Produto 13', 180.90)">Add to Cart</button>
     </div>
     <div class="Produto">
         <img src="https://i.pinimg.com/236x/70/67/64/706764d9a4a6e98825a4665b40b331c4.jpg" alt="Produto 14">
         <h2>Produto 14</h2>
-        <p>R$125.00</p>
+        <p>R$125,00</p>
         <button onclick="addToCart('Produto 14', 125.00)">Add to Cart</button>
     </div>
     <div class="Produto">
         <img src="https://i.pinimg.com/236x/e1/db/22/e1db22772d6899e3b77d0fdc612722ea.jpg" alt="Produto 15">
         <h2>Produto 15</h2>
-        <p>R$300.00</p>
+        <p>R$300,00</p>
         <button onclick="addToCart('Produto 15', 300.00)">Add to Cart</button>
     </div>
     <div class="Produto">
         <img src="https://i.pinimg.com/236x/58/84/b7/5884b771cf6d5be0be0056dda3af4abf.jpg" alt="Produto 16">
         <h2>Produto 16</h2>
-        <p>R$60.00</p>
+        <p>R$60,S00</p>
         <button onclick="addToCart('Produto 16', 60.00)">Add to Cart</button>
     </div>
 </div>
 
-<footer>
+<footer class="footer2">
     <p>&copy; RogerinhoBoasVendendas.</p>
 </footer>
 <script src="script.js"></script>
