--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -100,7 +100,7 @@
 <body>
 
 <header>
-    <h1 class="button" onclick="window.location.href='index.html'">RogerinhoBoasVendendas</h1>
+    <h1 class="h1_button" onclick="window.location.href='index.html'">RogerinhoBoasVendendas</h1>
     <div class="Buscar-bar">
         <input type="text" placeholder="Buscar Produtos...">
         <button onclick="BuscarProdutos()">Buscar</button>
@@ -108,8 +108,7 @@
     <button class="carrinho" onclick="window.location.href='carrinho.html'">Carrinho</button>
     <button class="Compras" onclick="window.location.href='pilha.html'">Histórico de compra</button>
 </header>
-
-<div class="login-register">
+<div class="login-register" class="container">
     <div class="form-container">
         <h2>Login</h2>
         <input type="text" placeholder="Email" required>
