--- a/src/main/resources/static/pagamento.html
+++ b/src/main/resources/static/pagamento.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <h1 class="button" onclick="window.location.href='index.html'">RogerinhoBoasVendendas</h1>
+    <h1 class="h1_button" onclick="window.location.href='index.html'">RogerinhoBoasVendendas</h1>
     <div class="Buscar-bar">
         <input type="text" placeholder="Buscar Produtos...">
         <button onclick="BuscarProdutos()">Buscar</button>
@@ -89,10 +89,10 @@
             <input type="number" id="cvv" name="cvv" required>
         </div>
         <p>Total a Pagar: <span id="totalPriceDisplay">R${totalPrice}</span></p>
-        <button type="submit" class="button">Finalizar Compra</button>
+        <button type="submit">Finalizar Compra</button>
     </form>
 </div>
-<footer>
+<footer class="footer2">
     <p>&copy; RogerinhoBoasVendendas.</p>
 </footer>
 <script src="script.js" defer></script>
