--- a/src/main/resources/static/pilha.html
+++ b/src/main/resources/static/pilha.html
@@ -12,7 +12,7 @@
 <!-- Header -->
 <header class="header">
     <div class="logo">
-        <h1 onclick="window.location.href='index.html'">RogerinhoBoasVendendas</h1>
+        <h1 class="h1_button" onclick="window.location.href='index.html'">RogerinhoBoasVendendas</h1>
     </div>
     <div class="header-buttons">
         <button class="login-button" onclick="window.location.href='login.html'">Login</button>
