--- a/src/main/resources/static/carrinho.html
+++ b/src/main/resources/static/carrinho.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-    <h1 class="h1_button" onclick="window.location.href='index.html'">RogerinhoBoasVendendas</h1>
+    <h1 class="h1_button" onclick="window.location.href='index.html'">RogerinhoBoasVendas</h1>
     <div class="Buscar-bar">
         <input type="text" placeholder="Buscar Produtos...">
         <button onclick="BuscarProdutos()">Buscar</button>
@@ -31,7 +31,7 @@
     </div>
 </div>
 <footer>
-    <p>&copy; RogerinhoBoasVendendas.</p>
+    <p>&copy; RogerinhoBoasVendas.</p>
 </footer>
 <script src="script.js"></script>
 
