--- a/src/main/resources/static/pagamento.html
+++ b/src/main/resources/static/pagamento.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <h1 class="h1_button" onclick="window.location.href='index.html'">RogerinhoBoasVendendas</h1>
+    <h1 class="h1_button" onclick="window.location.href='index.html'">RogerinhoBoasVendas</h1>
     <div class="Buscar-bar">
         <input type="text" placeholder="Buscar Produtos...">
         <button onclick="BuscarProdutos()">Buscar</button>
@@ -93,7 +93,7 @@
     </form>
 </div>
 <footer class="footer2">
-    <p>&copy; RogerinhoBoasVendendas.</p>
+    <p>&copy; RogerinhoBoasVendas.</p>
 </footer>
 <script src="script.js" defer></script>
 </body>
