--- a/src/main/resources/static/pilha.html
+++ b/src/main/resources/static/pilha.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Histórico de Pedidos - RogerinhoBoasVendendas</title>
+    <title>Histórico de Pedidos - RogerinhoBoasVendas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -12,7 +12,7 @@
 <!-- Header -->
 <header class="header">
     <div class="logo">
-        <h1 class="h1_button" onclick="window.location.href='index.html'">RogerinhoBoasVendendas</h1>
+        <h1 class="h1_button" onclick="window.location.href='index.html'">RogerinhoBoasVendas</h1>
     </div>
     <div class="header-buttons">
         <button class="login-button" onclick="window.location.href='login.html'">Login</button>
@@ -42,7 +42,7 @@
 
 <!-- Footer -->
 <footer class="footer">
-    <p>&copy; RogerinhoBoasVendendas. Todos os direitos reservados.</p>
+    <p>&copy; RogerinhoBoasVendas. Todos os direitos reservados.</p>
 </footer>
 
 <script>
