--- a/src/main/resources/static/pagamento.html
+++ b/src/main/resources/static/pagamento.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <h1 class="h1_button" onclick="window.location.href='index.html'">RogerinhoBoasVendendas</h1>
+    <h1 class="h1_button" onclick="window.location.href='index.html'">RogerinhoBoasVendas</h1>
     <div class="Buscar-bar">
         <input type="text" placeholder="Buscar Produtos...">
         <button onclick="BuscarProdutos()">Buscar</button>
@@ -17,7 +17,7 @@
     <button id="logout-button" onclick="logout()">Logout</button>
 
     <button class="carrinho" onclick="window.location.href='carrinho.html'">Carrinho</button>
-    <button class="Compras" onclick="window.location.href='pilha.html'">Histórico de compra</button>
+    <button class="Compras" onclick="window.location.href='historico.html'">Histórico de compra</button>
 </header>
 
 <div class="container">
@@ -66,9 +66,9 @@
             <label for="payment-method">Forma de Pagamento</label>
             <select id="payment-method" name="payment-method" required>
                 <option value="" disabled selected>Escolha uma forma de pagamento</option>
-                <option value="credit-card">Cartão de Crédito</option>
-                <option value="debit-card">Cartão de Débito</option>
-                <option value="pix">PIX</option>
+                <option value="Cartão de Credito">Cartão de Crédito</option>
+                <option value="Cartão de Debito">Cartão de Débito</option>
+                <option value="Pix">PIX</option>
             </select>
         </div>
         
