--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-    <h1 class="h1_button" onclick="window.location.href='index.html'">RogerinhoBoasVendendas</h1>
+    <h1 class="h1_button" onclick="window.location.href='index.html'">RogerinhoBoasVendas</h1>
     <div class="Buscar-bar">
         <input type="text" placeholder="Buscar Produtos...">
         <button onclick="BuscarProdutos()">Buscar</button>
@@ -18,7 +18,7 @@
     <button id="logout-button" onclick="logout()">Logout</button>
 
     <button class="carrinho" onclick="window.location.href='carrinho.html'">Carrinho</button>
-    <button class="Compras" onclick="window.location.href='pilha.html'">Histórico de compra</button>
+    <button class="Compras" onclick="window.location.href='historico.html'">Histórico de compra</button>
 </header>
 
 
